# TapeSort

./: .gitignore  CMakeLists.txt  README.md  settings.txt  srcFile
include/: Application.h  SettingsReader.h
libs/: CMakeLists.txt
libs/Tape/: CMakeLists.txt
libs/Tape/include/: FileTape.h  ITape.h  TapeTimeModel.h  VectorTape.h
libs/Tape/src/: FileTape.cpp  TapeTimeModel.cpp  VectorTape.cpp
libs/TapeSort/: CMakeLists.txt
libs/TapeSort/include/: Merge.h  TapeInsertSort.h  TapeMergeSort.h
libs/TapeSort/src/: Merge.cpp  TapeInsertSort.cpp  TapeMergeSort.cpp
libs/TapeSortAlgorithm/: CMakeLists.txt
libs/TapeSortAlgorithm/include/: Merge.h  TapeSort.h
libs/TapeSortAlgorithm/src/: Merge.cpp  TapeSort.cpp
libs/tape/: CMakeLists.txt
libs/tape/include/: FileTape.h  ITape.h  TapeFunctoins.h  VectorTape.h
libs/tape/src/: FileTape.cpp  TapeFunctions.cpp  VectorTape.cpp
src/: Application.cpp  SettingsReader.cpp  main.cpp
tests/: CMakeLists.txt
tests/Tape/: CMakeLists.txt
tests/Tape/src/: FileTapeTest.cpp  VectorTapeTest.cpp
tests/TapeSort/: CMakeLists.txt
tests/TapeSort/src/: MergeTapesTest.cpp  TapeInsertSortTest.cpp  TapeMergeSortTest.cpp  TapeSortMergeToIntermTest.cpp
tests/TapeSortAlgorithm/: CMakeLists.txt
tests/TapeSortAlgorithm/src/: MergeTapesTest.cpp  MergeTapes_test.cpp  TapeSortMergeToDestinationTest.cpp  TapeSortMergeToDestination_test.cpp  TapeSortMergeToIntermTest.cpp  TapeSortMergeToInterm_test.cpp  TapeSortTest.cpp
tests/tape/: CMakeLists.txt
tests/tape/src/: FileTape_test.cpp  VectorTape_test.cpp
